--- a/pom.xml
+++ b/pom.xml
@@ -134,6 +134,50 @@
                 </plugins>
             </build>
         </profile>
+
+        <profile>
+            <id>build-windows</id>
+
+            <activation>
+                <os><family>windows</family></os>
+            </activation>
+
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <version>${exec.maven.plugin.version}</version>
+                        <executions>
+                            <execution>
+                                <id>Build Native Windows App</id>
+                                <phase>install</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <workingDirectory>${project.basedir}</workingDirectory>
+                            <executable>build_app_windows.bat</executable>
+                            <environmentVariables>
+                                <APP_NAME>${app.name}</APP_NAME>
+                                <APP_PACKAGE>${project.groupId}</APP_PACKAGE>
+                                <APP_VENDOR>${app.vendor}</APP_VENDOR>
+                                <APP_VERSION>${client.version}</APP_VERSION>
+                                <JAVA_HOME>${java.home}</JAVA_HOME>
+                                <JAVA_VERSION>${java.version}</JAVA_VERSION>
+                                <MAIN_JAR>${project.name}-${project.version}.jar</MAIN_JAR>
+                                <MAIN_CLASS>${app.main.class}</MAIN_CLASS>
+                                <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
+                            </environmentVariables>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+
     </profiles>
 
 </project>
