--- a/pom.xml
+++ b/pom.xml
@@ -4,18 +4,19 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>uib.inf101</groupId>
-    <artifactId>SwingAppMvnPackage</artifactId>
+    <groupId>no.uib.inf101.app</groupId>
+    <artifactId>SamplePackagedSwingApp</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <name>SwingAppMvnPackage</name>
+    <name>Sample Application</name>
     <packaging>jar</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <app.name>${project.name}</app.name>
-        <app.main.class>uib.inf101.Main</app.main.class>
+        <app.main.class>no.uib.inf101.app.Main</app.main.class>
         <app.vendor>Torstein Strømme</app.vendor>
+        <mac.installer.type>dmg</mac.installer.type> <!-- dmg, pkg -->
+        <windows.installer.type>msi</windows.installer.type> <!-- msi, exe -->
 
         <java.version>17</java.version>
         <junit.version>5.9.1</junit.version>
@@ -95,11 +96,9 @@
     <profiles>
         <profile>
             <id>build-mac</id>
-
             <activation>
                 <os><family>mac</family></os>
             </activation>
-
             <build>
                 <plugins>
                     <plugin>
@@ -119,14 +118,15 @@
                             <workingDirectory>${project.basedir}</workingDirectory>
                             <executable>./build_app_mac.sh</executable>
                             <environmentVariables>
-                                <APP_NAME>${app.name}</APP_NAME>
-                                <JAVA_HOME>${java.home}</JAVA_HOME>
-                                <JAVA_VERSION>${java.version}</JAVA_VERSION>
-                                <MAIN_JAR>${project.name}-${project.version}.jar</MAIN_JAR>
-                                <MAIN_CLASS>${app.main.class}</MAIN_CLASS>
-                                <APP_VERSION>${client.version}</APP_VERSION>
                                 <APP_PACKAGE>${project.groupId}</APP_PACKAGE>
                                 <APP_VENDOR>${app.vendor}</APP_VENDOR>
+                                <APP_VERSION>${client.version}</APP_VERSION>
+                                <INSTALLER_TYPE>${mac.installer.type}</INSTALLER_TYPE>
+                                <JAVA_HOME>${java.home}</JAVA_HOME>
+                                <JAVA_VERSION>${java.version}</JAVA_VERSION>
+                                <MAIN_CLASS>${app.main.class}</MAIN_CLASS>
+                                <MAIN_JAR>${project.artifactId}-${project.version}.jar</MAIN_JAR>
+                                <PROJECT_NAME>${project.name}</PROJECT_NAME>
                                 <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
                             </environmentVariables>
                         </configuration>
@@ -137,11 +137,9 @@
 
         <profile>
             <id>build-windows</id>
-
             <activation>
                 <os><family>windows</family></os>
             </activation>
-
             <build>
                 <plugins>
                     <plugin>
@@ -161,13 +159,14 @@
                             <workingDirectory>${project.basedir}</workingDirectory>
                             <executable>build_app_windows.bat</executable>
                             <environmentVariables>
-                                <APP_NAME>${app.name}</APP_NAME>
+                                <APP_NAME>${project.name}</APP_NAME>
                                 <APP_PACKAGE>${project.groupId}</APP_PACKAGE>
                                 <APP_VENDOR>${app.vendor}</APP_VENDOR>
                                 <APP_VERSION>${client.version}</APP_VERSION>
+                                <INSTALLER_TYPE>${windows.installer.type}</INSTALLER_TYPE>
                                 <JAVA_HOME>${java.home}</JAVA_HOME>
                                 <JAVA_VERSION>${java.version}</JAVA_VERSION>
-                                <MAIN_JAR>${project.name}-${project.version}.jar</MAIN_JAR>
+                                <MAIN_JAR>${project.artifactId}-${project.version}.jar</MAIN_JAR>
                                 <MAIN_CLASS>${app.main.class}</MAIN_CLASS>
                                 <PROJECT_VERSION>${project.version}</PROJECT_VERSION>
                             </environmentVariables>
@@ -176,8 +175,6 @@
                 </plugins>
             </build>
         </profile>
-
-
     </profiles>
 
 </project>
